# buffering-async-logger

./: README.md  pyproject.toml
.github/workflows/: check.yml
buffering_async_logger/: __init__.py  caches.py  handlers.py  send_logs_utils.py  timers.py
scripts/: format.sh  test.sh  verify.sh
tests/: test_handlers.py  test_send_logs_utils.py  test_timers.py
